--- a/index.html
+++ b/index.html
@@ -7,5 +7,57 @@
         <script src="script.js" type="text/javascript"></script>
     </head>
     <body>
+        <header>
+            <div>
+                <a href="#">english</a>
+                <form class="search">
+                    <input name="search" type="text" placeholder="רשום מילת חיפוש" />
+                    <button type="submit"></button>
+                </form>
+            </div>
+            <img src="" alt="פז לוגו" />
+            <nav>
+                <ul>
+                    <li><a href="#" class="home">home</a></li>
+                    <li><a href="#"></a>אודות</li>
+                    <li><a href="#"></a>חטיבות</li>
+                    <li><a href="#"></a>אחריות תאגידית</li>
+                    <li><a href="#"></a>קשרי משקיעים</li>
+                    <li><a href="#"></a>התחנות שלנו</li>
+                    <li><a href="#"></a>קריירה</li>
+                    <li><a href="#"></a>חדשות ומדיה</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div>
+                <div class="row">
+                    <div class="column">שורה 1 עמודה 1</div>
+                    <div class="column">שורה 1 עמודה 2</div>
+                    <div class="column">שורה 1 עמודה 3</div>                    
+                </div>
+                <div class="row">
+                    <div class="column">שורה 2 עמודה 1</div>
+                    <div class="column">שורה 2 עמודה 2</div>
+                    <div class="column">שורה 2 עמודה 3</div>                    
+                </div>               
+            </div>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#" class="fb">fb</a></li>
+                    <li><a href="#"></a>עמוד הבית</li>
+                    <li><a href="#"></a>מחירונים</li>
+                    <li><a href="#"></a>קריירה</li>
+                    <li><a href="#"></a>תנאי שימוש</li>
+                    <li><a href="#"></a>נגישות</li>
+                    <li><a href="#"></a>מפת אתר</li>
+                    <li><a href="#"></a>צור קשר</li>
+                    <li><a href="#"></a>שטחי מסחר</li>
+                    <li><a href="#"></a>הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
