--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     </head>
     <body>
         <header>
-            <div>
-                <a href="#">english</a>
-                <form class="search">
-                    <input name="search" type="text" placeholder="רשום מילת חיפוש" />
-                    <button type="submit"></button>
-                </form>
+            <div clas="warpper">                
+                <div class="search-bar">
+                    <a href="#">english</a>
+                    <form class="search">
+                        <input name="search" type="text" placeholder="רשום מילת חיפוש" />
+                        <button type="submit"></button>
+                    </form>
+                </div>
+                <img class="logo" src="images/paz_logo.png" alt="פז לוגו" />
+                <nav>
+                    <ul>
+                        <li><a href="#" class="home">home</a></li>
+                        <li><a href="#"></a>אודות</li>
+                        <li><a href="#"></a>חטיבות</li>
+                        <li><a href="#"></a>אחריות תאגידית</li>
+                        <li><a href="#"></a>קשרי משקיעים</li>
+                        <li><a href="#"></a>התחנות שלנו</li>
+                        <li><a href="#"></a>קריירה</li>
+                        <li><a href="#"></a>חדשות ומדיה</li>
+                    </ul>
+                </nav>
             </div>
-            <img src="" alt="פז לוגו" />
-            <nav>
-                <ul>
-                    <li><a href="#" class="home">home</a></li>
-                    <li><a href="#"></a>אודות</li>
-                    <li><a href="#"></a>חטיבות</li>
-                    <li><a href="#"></a>אחריות תאגידית</li>
-                    <li><a href="#"></a>קשרי משקיעים</li>
-                    <li><a href="#"></a>התחנות שלנו</li>
-                    <li><a href="#"></a>קריירה</li>
-                    <li><a href="#"></a>חדשות ומדיה</li>
-                </ul>
-            </nav>
         </header>
         <main>
             <div>
