header section base layout complete - step 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div clas="warpper">                
+            <div class="group row">                
                 <div class="search-bar">
                     <a href="#">english</a>
                     <form class="search">
@@ -20,13 +20,13 @@
                 <nav>
                     <ul>
                         <li><a href="#" class="home">home</a></li>
-                        <li><a href="#"></a>אודות</li>
-                        <li><a href="#"></a>חטיבות</li>
-                        <li><a href="#"></a>אחריות תאגידית</li>
-                        <li><a href="#"></a>קשרי משקיעים</li>
-                        <li><a href="#"></a>התחנות שלנו</li>
-                        <li><a href="#"></a>קריירה</li>
-                        <li><a href="#"></a>חדשות ומדיה</li>
+                        <li><a href="#">אודות</a></li>
+                        <li><a href="#">חטיבות</a></li>
+                        <li><a href="#">אחריות תאגידית</a></li>
+                        <li><a href="#">קשרי משקיעים</a></li>
+                        <li><a href="#">התחנות שלנו</a></li>
+                        <li><a href="#">קריירה</a></li>
+                        <li><a href="#">חדשות ומדיה</a></li>
                     </ul>
                 </nav>
             </div>
@@ -49,15 +49,15 @@
             <nav>
                 <ul>
                     <li><a href="#" class="fb">fb</a></li>
-                    <li><a href="#"></a>עמוד הבית</li>
-                    <li><a href="#"></a>מחירונים</li>
-                    <li><a href="#"></a>קריירה</li>
-                    <li><a href="#"></a>תנאי שימוש</li>
-                    <li><a href="#"></a>נגישות</li>
-                    <li><a href="#"></a>מפת אתר</li>
-                    <li><a href="#"></a>צור קשר</li>
-                    <li><a href="#"></a>שטחי מסחר</li>
-                    <li><a href="#"></a>הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</li>
+                    <li><a href="#">עמוד הבית</a></li>
+                    <li><a href="#">מחירונים</a></li>
+                    <li><a href="#">קריירה</a></li>
+                    <li><a href="#">תנאי שימוש</a></li>
+                    <li><a href="#">נגישות</a></li>
+                    <li><a href="#">מפת אתר</a></li>
+                    <li><a href="#">צור קשר</a></li>
+                    <li><a href="#">שטחי מסחר</a></li>
+                    <li><a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
                 </ul>
             </nav>
         </footer>
