--- a/index.html
+++ b/index.html
@@ -34,14 +34,62 @@
         <main>
             <div>
                 <div class="row">
-                    <div class="column">שורה 1 עמודה 1</div>
-                    <div class="column">שורה 1 עמודה 2</div>
-                    <div class="column">שורה 1 עמודה 3</div>                    
+                    <div class="column"
+                        <article>
+                            <h1>קמעונאות ומסחר</h1>
+                            <p>
+במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                            </p>
+                            <a href="#">קרא עוד</a>
+                        </article>
+                    </div>
+                    <div class="column"
+                        <article>
+                            <h1>זיקוק</h1>
+                            <p>
+פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
+                            </p>
+                            <a href="#">קרא עוד</a>
+                        </article>
+                    </div>
+                    <div class="column"
+                        <article>
+                            <h1>תעשיות ושירותים</h1>
+                            <p>
+תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
+                            </p>
+                            <a href="#">קרא עוד</a>
+                        </article>
+                    </div>                    
                 </div>
                 <div class="row">
-                    <div class="column">שורה 2 עמודה 1</div>
-                    <div class="column">שורה 2 עמודה 2</div>
-                    <div class="column">שורה 2 עמודה 3</div>                    
+                    <div class="column">
+                        <aside>
+                            <h1>כרטיס אשראי שופרסל וכרטיס אשראי יש</h1>
+                            <img src="" />
+                            <a href="#">לפרטים נוספים</a>
+                        </aside>
+                    </div>
+                    <div class="column">
+                        <aside>
+                            <h1>שטחי מסחר פז סנטר</h1>
+                            <img src="" />
+                            <a href="#">לפרטים נוספים</a>
+                        </aside>
+                    </div>
+                    <div class="column">
+                        <aside>
+                            <h1>התחנות שלנו בדרך שלך</h1>                            
+                            <div>
+                                <ul>
+                                    <li><a href="#">צפון</a></li>
+                                    <li><a href="#">מרכז</a></li>
+                                    <li><a href="#">דרום</a></li>
+                                </ul>
+                                <img src="" />
+                            </div>
+                        </aside>
+                    </div>                                       
                 </div>               
             </div>
         </main>
