format document - beuty code

--- a/index.html
+++ b/index.html
@@ -1,113 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>פז - עמוד הבית</title>
-        <meata charset="UTF-8" />
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <script src="script.js" type="text/javascript"></script>
-    </head>
-    <body>
-        <header>
-            <div class="group row">                
-                <div class="search-bar">
-                    <a href="#">english</a>
-                    <form class="search">
-                        <input name="search" type="text" placeholder="רשום מילת חיפוש" />
-                        <button type="submit"></button>
-                    </form>
-                </div>
-                <img class="logo" src="images/paz_logo.png" alt="פז לוגו" />
-                <nav>
-                    <ul>
-                        <li><a href="#" class="home">home</a></li>
-                        <li><a href="#">אודות</a></li>
-                        <li><a href="#">חטיבות</a></li>
-                        <li><a href="#">אחריות תאגידית</a></li>
-                        <li><a href="#">קשרי משקיעים</a></li>
-                        <li><a href="#">התחנות שלנו</a></li>
-                        <li><a href="#">קריירה</a></li>
-                        <li><a href="#">חדשות ומדיה</a></li>
-                    </ul>
-                </nav>
+
+<head>
+    <title>פז - עמוד הבית</title>
+    <meata charset="UTF-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="script.js" type="text/javascript"></script>
+</head>
+
+<body>
+    <header>
+        <div class="group row">
+            <div class="search-bar">
+                <a href="#">english</a>
+                <form class="search">
+                    <input name="search" type="text" placeholder="רשום מילת חיפוש" />
+                    <button type="submit"></button>
+                </form>
             </div>
-        </header>
-        <main>
-            <div>
-                <div class="row">
-                    <div class="column"
-                        <article>
-                            <h1>קמעונאות ומסחר</h1>
-                            <p>
-במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...
-                            </p>
-                            <a href="#">קרא עוד</a>
-                        </article>
-                    </div>
-                    <div class="column"
-                        <article>
-                            <h1>זיקוק</h1>
-                            <p>
-פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
-                            </p>
-                            <a href="#">קרא עוד</a>
-                        </article>
-                    </div>
-                    <div class="column"
-                        <article>
-                            <h1>תעשיות ושירותים</h1>
-                            <p>
-תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
-                            </p>
-                            <a href="#">קרא עוד</a>
-                        </article>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <aside>
-                            <h1>כרטיס אשראי שופרסל וכרטיס אשראי יש</h1>
-                            <img src="" />
-                            <a href="#">לפרטים נוספים</a>
-                        </aside>
-                    </div>
-                    <div class="column">
-                        <aside>
-                            <h1>שטחי מסחר פז סנטר</h1>
-                            <img src="" />
-                            <a href="#">לפרטים נוספים</a>
-                        </aside>
-                    </div>
-                    <div class="column">
-                        <aside>
-                            <h1>התחנות שלנו בדרך שלך</h1>                            
-                            <div>
-                                <ul>
-                                    <li><a href="#">צפון</a></li>
-                                    <li><a href="#">מרכז</a></li>
-                                    <li><a href="#">דרום</a></li>
-                                </ul>
-                                <img src="" />
-                            </div>
-                        </aside>
-                    </div>                                       
-                </div>               
-            </div>
-        </main>
-        <footer>
+            <img class="logo" src="images/paz_logo.png" alt="פז לוגו" />
             <nav>
                 <ul>
-                    <li><a href="#" class="fb">fb</a></li>
-                    <li><a href="#">עמוד הבית</a></li>
-                    <li><a href="#">מחירונים</a></li>
+                    <li><a href="#" class="home">home</a></li>
+                    <li><a href="#">אודות</a></li>
+                    <li><a href="#">חטיבות</a></li>
+                    <li><a href="#">אחריות תאגידית</a></li>
+                    <li><a href="#">קשרי משקיעים</a></li>
+                    <li><a href="#">התחנות שלנו</a></li>
                     <li><a href="#">קריירה</a></li>
-                    <li><a href="#">תנאי שימוש</a></li>
-                    <li><a href="#">נגישות</a></li>
-                    <li><a href="#">מפת אתר</a></li>
-                    <li><a href="#">צור קשר</a></li>
-                    <li><a href="#">שטחי מסחר</a></li>
-                    <li><a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
+                    <li><a href="#">חדשות ומדיה</a></li>
                 </ul>
             </nav>
-        </footer>
-    </body>
+        </div>
+    </header>
+    <main>
+        <div>
+            <div class="row">
+                <div class="column" <article>
+                    <h1>קמעונאות ומסחר</h1>
+                    <p>
+                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
+                        פועלת...
+                    </p>
+                    <a href="#">קרא עוד</a>
+                    </article>
+                </div>
+                <div class="column" <article>
+                    <h1>זיקוק</h1>
+                    <p>
+                        פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
+                    </p>
+                    <a href="#">קרא עוד</a>
+                    </article>
+                </div>
+                <div class="column" <article>
+                    <h1>תעשיות ושירותים</h1>
+                    <p>
+                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
+                    </p>
+                    <a href="#">קרא עוד</a>
+                    </article>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <aside>
+                        <h1>כרטיס אשראי שופרסל וכרטיס אשראי יש</h1>
+                        <img src="" />
+                        <a href="#">לפרטים נוספים</a>
+                    </aside>
+                </div>
+                <div class="column">
+                    <aside>
+                        <h1>שטחי מסחר פז סנטר</h1>
+                        <img src="" />
+                        <a href="#">לפרטים נוספים</a>
+                    </aside>
+                </div>
+                <div class="column">
+                    <aside>
+                        <h1>התחנות שלנו בדרך שלך</h1>
+                        <div>
+                            <ul>
+                                <li><a href="#">צפון</a></li>
+                                <li><a href="#">מרכז</a></li>
+                                <li><a href="#">דרום</a></li>
+                            </ul>
+                            <img src="" />
+                        </div>
+                    </aside>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#" class="fb">fb</a></li>
+                <li><a href="#">עמוד הבית</a></li>
+                <li><a href="#">מחירונים</a></li>
+                <li><a href="#">קריירה</a></li>
+                <li><a href="#">תנאי שימוש</a></li>
+                <li><a href="#">נגישות</a></li>
+                <li><a href="#">מפת אתר</a></li>
+                <li><a href="#">צור קשר</a></li>
+                <li><a href="#">שטחי מסחר</a></li>
+                <li><a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
+            </ul>
+        </nav>
+    </footer>
+</body>
+
 </html>
