fix end tag not closed properly

--- a/index.html
+++ b/index.html
@@ -36,29 +36,32 @@
     <main>
         <div>
             <div class="row">
-                <div class="column" <article>
-                    <h1>קמעונאות ומסחר</h1>
-                    <p>
-                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
-                        פועלת...
-                    </p>
-                    <a href="#">קרא עוד</a>
+                <div class="column">
+                    <article>
+                        <h1>קמעונאות ומסחר</h1>
+                        <p>
+                            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
+                            פועלת...
+                        </p>
+                        <a href="#">קרא עוד</a>
                     </article>
                 </div>
-                <div class="column" <article>
-                    <h1>זיקוק</h1>
-                    <p>
-                        פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
-                    </p>
-                    <a href="#">קרא עוד</a>
+                <div class="column">
+                    <article>
+                        <h1>זיקוק</h1>
+                        <p>
+                            פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
+                        </p>
+                        <a href="#">קרא עוד</a>
                     </article>
                 </div>
-                <div class="column" <article>
-                    <h1>תעשיות ושירותים</h1>
-                    <p>
-                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
-                    </p>
-                    <a href="#">קרא עוד</a>
+                <div class="column">
+                    <article>
+                        <h1>תעשיות ושירותים</h1>
+                        <p>
+                            תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
+                        </p>
+                        <a href="#">קרא עוד</a>
                     </article>
                 </div>
             </div>
