more style to fotter row and to the second row of the main content

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     <article>
                         <h1>קמעונאות ומסחר</h1>
                         <p>
-                            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
-                            פועלת...
+                            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...
                         </p>
                         <a href="#">קרא עוד</a>
                     </article>
@@ -99,7 +98,9 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="#" class="fb">fb</a></li>
+                <li>
+                    <a href="#" class="fb"></a>
+                </li>
                 <li><a href="#">עמוד הבית</a></li>
                 <li><a href="#">מחירונים</a></li>
                 <li><a href="#">קריירה</a></li>
