second row complete style

--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                     <aside>
                         <h1>כרטיס אשראי שופרסל וכרטיס אשראי יש</h1>
                         <img src="" />
-                        <a href="#">לפרטים נוספים</a>
+                        <a class="details" href="#">לפרטים נוספים</a>
                     </aside>
                 </div>
                 <div class="column">
                     <aside>
                         <h1>שטחי מסחר פז סנטר</h1>
                         <img src="" />
-                        <a href="#">לפרטים נוספים</a>
+                        <a class="details" href="#">לפרטים נוספים</a>
                     </aside>
                 </div>
                 <div class="column">
                     <aside>
                         <h1>התחנות שלנו בדרך שלך</h1>
                         <div>
-                            <ul>
+                            <ul class="details">
                                 <li><a href="#">צפון</a></li>
                                 <li><a href="#">מרכז</a></li>
                                 <li><a href="#">דרום</a></li>
