--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <img class="logo" src="images/paz_logo.png" alt="פז לוגו" />
             <nav>
                 <ul>
-                    <li><a href="#" class="home">home</a></li>
+                    <li>
+                        <a href="#" class="home"></a>
+                    </li>
                     <li><a href="#">אודות</a></li>
                     <li><a href="#">חטיבות</a></li>
                     <li><a href="#">אחריות תאגידית</a></li>
