--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>פז - עמוד הבית</title>
-    <meata charset="UTF-8" />
+    <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js" type="text/javascript"></script>
 </head>
