more style changes to the boxes in first row

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <div>
-            <div class="row">
+            <div class="row read-more">
                 <div class="column">
                     <article>
                         <h1>קמעונאות ומסחר</h1>
