add sub menu navigation - not complete yet

--- a/index.html
+++ b/index.html
@@ -24,8 +24,69 @@
                     <li>
                         <a href="#" class="home"></a>
                     </li>
-                    <li><a href="#">אודות</a></li>
-                    <li><a href="#">חטיבות</a></li>
+                    <li><a href="#">אודות</a>
+                        <ul>
+                            <li>
+                                <a href="#">
+			                <span>אודות</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>היסטוריה</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>חזון וערכים</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>מבנה הקבוצה</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>חברי דירקטוריון</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>הנהלת הקבוצה</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>פרסים והוקרה</span>
+                        </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="#">חטיבות</a>
+                        <ul>
+                            <li>
+                                <a href="#">
+			                <span>חטיבות</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>קמעונאות ומסחר</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>תעשיות ושירותים</span>
+                        </a>
+                            </li>
+                            <li>
+                                <a href="#">
+			                <span>זיקוק</span>
+                        </a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="#">אחריות תאגידית</a></li>
                     <li><a href="#">קשרי משקיעים</a></li>
                     <li><a href="#">התחנות שלנו</a></li>
@@ -42,7 +103,8 @@
                     <article>
                         <h1>קמעונאות ומסחר</h1>
                         <p>
-                            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
+                            פועלת...
                         </p>
                         <a href="#">קרא עוד</a>
                     </article>
